# chunkformer

./: .gitignore  README.md  api.py  cli.py  config.yml  decode.py  main.py  pyproject.toml  requirements.txt  run_api.py
chunkformer-large-vie/: .gitattributes  README.md  config.yaml  dataset.tsv  global_cmvn  vocab.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md
model/: asr_model.py
model/utils/: checkpoint.py  config.py  logging.py
tests/: test_api.py
